--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "react-scroll": "^1.7.14"
+    "react-scroll": "^1.7.14",
+    "react-slideshow-image": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
