--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "font-awesome": "^4.7.0",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^16.9.0",
     "react-fontawesome": "^1.6.1",
     "react-router-dom": "^5.0.1",
