--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-scroll": "^1.7.14",
-    "react-slideshow-image": "^1.3.0"
+    "react-slideshow-image": "^1.3.0",
+    "react-spring": "^8.0.27"
   },
   "scripts": {
     "start": "react-scripts start",
