--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "3.1.1",
     "react-scroll": "^1.7.14",
     "react-slideshow-image": "^1.3.0",
+    "react-spring": "^8.0.27",
     "react-transition-group": "^4.3.0"
   },
   "scripts": {
